Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2012-05-31 (SVN):
    * quakefs.h: Added Amiga to list of platforms where we don't need
      user directories.

2012-05-31 (SVN):
    * gl_draw.c (Draw_CacheLoadingPic): When moving pixels, do not take
      the start point as data[3]: data[0], i.e. data itself, should be
      just OK. (can't remember why I did it that way, but I noticed it
      thanks to a weird "array subscript is above array bounds" warning
      from g++..

2012-05-31 (SVN):
    * hexenworld/client/cl_main.c (CL_ConnectionlessPacket): Removed the
      extra '&' before the array variable 'data' when sending A2A_ACK,
      also changed its type to byte instead of char.

2012-05-31 (SVN):
    * Changed Sys_FindFirst() and Sys_FindNext() to return const.

2012-05-31 (SVN):
    * Steven reports that uhexen2 works nicely on Solaris: updated the
      release notes and TODO files.

2012-05-31 (SVN):
    * Makefiles: refuse the stupid 'cc' default of make for CC, which
      not necessarily exist everywhere.

2012-05-31 (SVN):
    * Makefiles: Cleanup. Moved many things from scripts/makefile.inc to
      individual makefiles. Also added a dummy Amiga section, leaving it
      to porters for filling in its blanks, for now.

2012-05-31 (SVN):
    * Makefiles: Removed the ARCHFLAGS variable, not used for quite some
      time.

2012-05-30 (SVN):
    * net_sys.h: Added new selectsocket macro, which expands simply to
      select for unix and windows, to select_s for dos and to WaitSelect
      for amiga.
    * hexen2/net_udp.c, hexenworld/net_udp.c, hw_utils/hwmaster/net.c,
      hwmquery/hwmquery.c, hwrcon/hwrcon.c, hwrcon/hwterm.c: Add support
      for amiga (bsdsocket.library).

2012-05-30 (SVN):
    * net_sys.h: Added missing Amiga (bsdsocket.library) defs, separated
      unix and amiga sections.

2012-05-30 (SVN):
    * net_sys.h: Amiga bsdsockets.library struct sockaddr has sa_len.

2012-05-30 (SVN):