@@ -1,5 +1,6 @@
 /*
  * sys.h: non-portable functions
+ * relies on: arch_def.h
  * $Id$
  */
 
@@ -35,10 +36,19 @@ void Sys_MakeCodeWriteable (unsigned long startaddr, unsigned long length);
 
 /* disable use of password file on platforms where they
    aren't necessary or not possible. */
-#if defined(PLATFORM_WINDOWS) || defined(PLATFORM_DOS)
+#if defined(PLATFORM_DOS) || defined(PLATFORM_AMIGA) || \
+    defined(PLATFORM_WINDOWS)
 #undef	USE_PASSWORD_FILE
 #define	USE_PASSWORD_FILE	0
 #endif	/* _PASSWORD_FILE */
+
+/* disable user directories on platforms where they
+ * aren't necessary or not possible. */
+#if defined(PLATFORM_DOS) || defined(PLATFORM_AMIGA) || \
+    defined(PLATFORM_WINDOWS)
+#undef	DO_USERDIRS
+#define	DO_USERDIRS	0
+#endif	/* DO_USERDIRS  */
 
 
 /* system IO */
